src/snapshots/tui_term__widget__tests__vttest_09_07.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "***********************                                                         ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "   This illustrates the "wrap around bug" which exists on a                     ",
        "   standard VT100. At the top of the screen there should be                     ",
        "   a row of +'s, and the rightmost column should be filled                      ",
        "   with *'s. But if the bug is present, some of the *'s may                     ",
        "   be placed in other places, e.g. in the leftmost column,                      ",
        "   and the top line of +'s may be scrolled away.                                ",
        "                                                                                ",
        "                                                                                ",
        "Push <RETURN>                                                                   ",
        "█                                                                               ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
