src/snapshots/tui_term__widget__tests__vttest_09_09.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "This is 20 lines of text (line 1), no scroll region.                            ",
        "This is 20 lines of text (line 2), no scroll region.                            ",
        "This is 20 lines of text (line 3), no scroll region.                            ",
        "This is 20 lines of text (line 4), no scroll region.                            ",
        "This is 20 lines of text (line 5), no scroll region.                            ",
        "This is 20 lines of text (line 6), no scroll region.                            ",
        "This is 20 lines of text (line 7), no scroll region.                            ",
        "This is 20 lines of text (line 8), no scroll region.                            ",
        "This is 20 lines of text (line 9), no scroll region.                            ",
        "This is 20 lines of text (line 10), no scroll region.                           ",
        "This is 20 lines of text (line 11), no scroll region.                           ",
        "This is 20 lines of text (line 12), no scroll region.                           ",
        "This is 20 lines of text (line 13), no scroll region.                           ",
        "This is 20 lines of text (line 14), no scroll region.                           ",
        "This is 20 lines of text (line 15), no scroll region.                           ",
        "This is 20 lines of text (line 16), no scroll region.                           ",
        "This is 20 lines of text (line 17), no scroll region.                           ",
        "This is 20 lines of text (line 18), no scroll region.                           ",
        "This is 20 lines of text (line 19), no scroll region.                           ",
        "This is 20 lines of text (line 20), no scroll region.                           ",
        "Push <RETURN>                                                                   ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 1, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
