src/snapshots/tui_term__widget__tests__vttest_11_05_04.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "CHT with param == 1:                                                            ",
        "********************                                                            ",
        "                                                                                ",
        "CHT with param != 1:                                                            ",
        "+                                                                               ",
        "                                                                                ",
        "Normal tabs:                                                                    ",
        "        *       *       *       *       *       *       *       *       *      *",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "----+----1----+----2----+----3----+----4----+----5----+----6----+----7----+----8",
        "Test Cursor-Horizontal-Index (CHT)                                              ",
        "The lines with *'s above should look the same (they wrap once)                  ",
        "Push <RETURN>                                                                   ",
        "█                                                                               ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
