src/snapshots/tui_term__widget__tests__vttest_11_05_05.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "**                 *                                                            ",
        "**                                                                              ",
        "**                                                                              ",
        "**                                                                              ",
        "**                                                                              ",
        "**                                                                              ",
        "**                                                                              ",
        "**                                                                              ",
        "**                                                                              ",
        "**                                                                              ",
        "**                                                                              ",
        "**                                                                              ",
        "**                 **                                                           ",
        "                                                                                ",
        "----+----1----+----2----+----3----+----4----+----5----+----6----+----7----+----8",
        "Test Horizontal-Position-Relative (HPR)                                         ",
        "There should be a box-outline made of *'s in the middle of the screen.          ",
        "Push <RETURN>                                                                   ",
        "█                                                                               ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
